@@ -17,12 +17,7 @@
       </p>
     </td>
     <td width="50%">
-      <p class="top" align="right">
-	<tt>http://lilypond.org</tt>
-	<a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
-	  <tt>.ca</tt> mirror
-	</a>
-      </p>
+
     </td>
   </tr>
 </table>
